--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,18 @@
         android:name=".YoElevationApplication"
     >
         <activity
-            android:name=".YouOnMapActivity"
-            android:label="@string/title_activity_you_on_map" >
+            android:name=".MainActivity"
+            android:label="Yo Elevation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SearchPlacesActivity"
+            android:label="Search Places"
+        />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -37,5 +41,6 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
 </manifest>
