--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyCqBwAq8hPb29xrd4nKe35F2YLfq46pknM" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
